tests/derive/fail/enum_not_supported.rs
use kumo_derive::Extract;

#[derive(Extract)]
enum Bad {
    Variant,
}

fn main() {}
